--- a/app/category.html
+++ b/app/category.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="css/flexslider.css">
     <link rel="stylesheet" href="css/jquery.formstyler.theme.css">
+    <link rel="stylesheet" type="text/css" href="css/slicknav.css">
 
 
     <link rel="stylesheet" href="css/font-awesome.css">
@@ -23,17 +24,18 @@
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+   <!--  [if lt IE 9]> -->
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <!-- <![endif] -->
 </head>
+
 <body>
 <!-- HEADER START -->
     <header>
         <div class="top-header white-bg">
             <div class="container">
-                <div class="flex-container justify-sp-between">
+                <div class="flex-container justify-sp-between flex-wrap">
                     <ul class="phone-list flex-container align-center">
                         <li class="flex-container align-center"><span class="custom-icon icon-mail-ic"></span>info@shopy.com</li>
                         <li class="flex-container align-center"><span class="custom-icon icon-phone-book-ic"></span>996 - 5553 - 453</li>
@@ -49,7 +51,7 @@
         </div>
         <div class="bottom-header white-bg">
             <div class="container">
-                <div class="flex-container justify-sp-between align-center">
+                <div class="flex-container justify-sp-between align-center flex-wrap">
                     <div class="logo">
                         <img src="img/logo.png">
                     </div>
@@ -71,6 +73,7 @@
         </div>
     </header>
 <!-- HEADER END -->
+
 <!-- MAIN START -->
     <main>
         <div class="category-wrap">
@@ -452,33 +455,28 @@
         </div>
         <section class="default-section">
             <div class="container">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <div class="subscribe-form white-bg flex-container align-center justify-sp-between">
-                                <div class="subscribe-description">
-                                    <span class="subscribe-description-title orange-text">News Letter</span>
-                                    <span class="subscribe-description-text">join us now to get all news and special offers</span>
-                                </div>
-                                <form class="flex-container align-center">
-                                    <div class="subscribe-input-group">
-                                        <label for="subscribeEmail" class="custom-icon icon-mail-ic"></label>
-                                        <input type="email" class="subscribe-input" id="subscribeEmail" placeholder="type your email here">
-                                    </div>
-                                    <button class="btn btn-default orange-bg">join us</button>
-                                </form>
-                            </div>
-                        </div>
+                <div class="subscribe-form white-bg flex-container align-center justify-sp-between flex-wrap">
+                    <div class="subscribe-description">
+                        <span class="subscribe-description-title orange-text">News Letter</span>
+                        <span class="subscribe-description-text">join us now to get all news and special offers</span>
                     </div>
+                    <form class="flex-container align-center flex-wrap">
+                        <div class="subscribe-input-group">
+                            <label for="subscribeEmail" class="custom-icon icon-mail-ic"></label>
+                            <input type="email" class="subscribe-input" id="subscribeEmail" placeholder="type your email here">
+                        </div>
+                        <button class="btn btn-default orange-bg">join us</button>
+                    </form>
                 </div>
             </div>
         </section>
     </main>
 <!-- MAIN END -->
-    <footer>
-        
-            <div class="container">
-            <div class="flex-container justify-sp-between">
+
+<!-- FOOTER START -->
+    <footer> 
+        <div class="container">
+            <div class="flex-container justify-sp-between flex-wrap">
                 <div class="footer-logo">
                     <img src="img/logo.png">
                     <span>shopy c 2015 . your copy right here</span>
@@ -499,7 +497,7 @@
                 </ul>
                 <div class="payment-methods">
                     <span>Payment Methods</span>
-                    <ul class="cards-icons flex-container">
+                    <ul class="cards-icons">
                         <li class="icon-amex-ic"></li>
                         <li class="icon-no-name-cart-1-ic"></li>
                         <li class="icon-visa-ic"></li>
@@ -508,9 +506,10 @@
                     </ul>
                 </div>
             </div>
-            </div>
-
+        </div>
     </footer>
+<!-- FOOTER END -->
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -518,6 +517,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/jquery.formstyler.min.js"></script>
+<script src="js/jquery.slicknav.min.js"></script>
 <script src="js/plugins.min.js"></script>
 </body>
 </html>
