--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="css/flexslider.css">
     <link rel="stylesheet" href="css/jquery.formstyler.theme.css">
+    <link rel="stylesheet" type="text/css" href="css/slicknav.css">
 
 
     <link rel="stylesheet" href="css/font-awesome.css">
@@ -23,17 +24,18 @@
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+   <!--  [if lt IE 9]> -->
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <!-- <![endif] -->
 </head>
+
 <body>
 <!-- HEADER START -->
     <header>
         <div class="top-header white-bg">
             <div class="container">
-                <div class="flex-container justify-sp-between">
+                <div class="flex-container justify-sp-between flex-wrap">
                     <ul class="phone-list flex-container align-center">
                         <li class="flex-container align-center"><span class="custom-icon icon-mail-ic"></span>info@shopy.com</li>
                         <li class="flex-container align-center"><span class="custom-icon icon-phone-book-ic"></span>996 - 5553 - 453</li>
@@ -49,7 +51,7 @@
         </div>
         <div class="bottom-header white-bg">
             <div class="container">
-                <div class="flex-container justify-sp-between align-center">
+                <div class="flex-container justify-sp-between align-center flex-wrap">
                     <div class="logo">
                         <img src="img/logo.png">
                     </div>
@@ -71,23 +73,55 @@
         </div>
     </header>
 <!-- HEADER END -->
+
 <!-- MAIN START -->
     <main>
         <section class="items-carousel flex-container align-center">
             <div class="container">
-                <div class="flex-container">
-                    <div class="items-carousel-description">
-                        <div class="title big orange-text">
-                            <span>FULL WINTER KIT</span>
-                        </div>
-                        <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
-                        <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
-                        <div class="items-carousel-price">   
-                            <span>Price : 120$</span>
-                            <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
-                        </div> 
-                    </div>
+                <div class="item-flexslider">
+                    <ul class="slides">
+                        <li>
+                            <div class="items-carousel-description">
+                                <div class="title big orange-text">
+                                    <span>FULL WINTER KIT</span>
+                                </div>
+                                <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
+                                <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
+                                <div class="items-carousel-price">   
+                                    <span>Price : 120$</span>
+                                    <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
+                                </div> 
+                            </div>
+                        </li>
+                        <li>
+                            <div class="items-carousel-description">
+                                <div class="title big orange-text">
+                                    <span>FULL WINTER KIT</span>
+                                </div>
+                                <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
+                                <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
+                                <div class="items-carousel-price">   
+                                    <span>Price : 120$</span>
+                                    <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
+                                </div> 
+                            </div>
+                        </li>
+                        <li>
+                            <div class="items-carousel-description">
+                                <div class="title big orange-text">
+                                    <span>FULL WINTER KIT</span>
+                                </div>
+                                <h6>Half Jacket + Skiny Trousers + Boot leather</h6>
+                                <span class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
+                                <div class="items-carousel-price">   
+                                    <span>Price : 120$</span>
+                                    <div class="carousel-icon icon-cart-hover-ic"></div><span class="orange-text">Order now</span>
+                                </div> 
+                            </div>
+                        </li>
+                    </ul>
                 </div>
+                    
             </div>
         </section>
         <section class="default-section">
@@ -98,7 +132,7 @@
                 <span class="subtitle text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
                 <div class="new-item">
                     <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="item">
                                 <div class="item-img">
                                     <a href="product.html"><img src="img/product-Img.png"></a>
@@ -129,7 +163,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="item">
                                 <div class="item-img">
                                     <a href="product.html"><img src="img/item-img-2.png"></a>
@@ -160,7 +194,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="item">
                                 <div class="item-img">
                                     <a href="product.html"><img src="img/item-img-3.png"></a>
@@ -191,7 +225,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-sm-6">
                             <div class="item">
                                 <div class="item-img">
                                     <a href="product.html"><img src="img/item-img-3.png"></a>
@@ -236,7 +270,7 @@
                 <div class="special-offer">
                     <div class="row">
                         <div class="col-md-7">
-                            <div class="special-offer-sale flex-container justify-sp-between align-center">
+                            <div class="special-offer-sale flex-container justify-sp-between align-center flex-wrap">
                                 <div class="sale-banner">
                                     <div class="light-orange-bg"></div>
                                     <div class="orange-bg">
@@ -273,7 +307,7 @@
                 </div>
                 <span class="subtitle text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry</span>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="item-mini">
                             <div class="flex-container">
                                 <div class="item-mini-img">
@@ -298,7 +332,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="item-mini">
                             <div class="flex-container">
                                 <div class="item-mini-img">
@@ -323,7 +357,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 hidden-sm">
                         <div class="item-mini">
                             <div class="flex-container">
                                 <div class="item-mini-img">
@@ -353,31 +387,28 @@
         </section>
         <section class="default-section">
             <div class="container">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="subscribe-form white-bg flex-container align-center justify-sp-between">
-                            <div class="subscribe-description">
-                                <span class="subscribe-description-title orange-text">News Letter</span>
-                                <span class="subscribe-description-text">join us now to get all news and special offers</span>
-                            </div>
-                            <form class="flex-container align-center">
-                                <div class="subscribe-input-group">
-                                    <label for="subscribeEmail" class="custom-icon icon-mail-ic"></label>
-                                    <input type="email" class="subscribe-input" id="subscribeEmail" placeholder="type your email here">
-                                </div>
-                                <button class="btn btn-default orange-bg">join us</button>
-                            </form>
-                        </div>
+                <div class="subscribe-form white-bg flex-container align-center justify-sp-between flex-wrap">
+                    <div class="subscribe-description">
+                        <span class="subscribe-description-title orange-text">News Letter</span>
+                        <span class="subscribe-description-text">join us now to get all news and special offers</span>
                     </div>
+                    <form class="flex-container align-center flex-wrap">
+                        <div class="subscribe-input-group">
+                            <label for="subscribeEmail" class="custom-icon icon-mail-ic"></label>
+                            <input type="email" class="subscribe-input" id="subscribeEmail" placeholder="type your email here">
+                        </div>
+                        <button class="btn btn-default orange-bg">join us</button>
+                    </form>
                 </div>
             </div>
         </section>
     </main>
 <!-- MAIN END -->
-    <footer>
-        
-            <div class="container">
-            <div class="flex-container justify-sp-between">
+
+<!-- FOOTER START -->
+    <footer> 
+        <div class="container">
+            <div class="flex-container justify-sp-between flex-wrap">
                 <div class="footer-logo">
                     <img src="img/logo.png">
                     <span>shopy c 2015 . your copy right here</span>
@@ -398,7 +429,7 @@
                 </ul>
                 <div class="payment-methods">
                     <span>Payment Methods</span>
-                    <ul class="cards-icons flex-container">
+                    <ul class="cards-icons">
                         <li class="icon-amex-ic"></li>
                         <li class="icon-no-name-cart-1-ic"></li>
                         <li class="icon-visa-ic"></li>
@@ -407,9 +438,10 @@
                     </ul>
                 </div>
             </div>
-            </div>
-
+        </div>
     </footer>
+<!-- FOOTER END -->
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -417,6 +449,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/jquery.formstyler.min.js"></script>
+<script src="js/jquery.slicknav.min.js"></script>
 <script src="js/plugins.min.js"></script>
 </body>
 </html>
